# Kigi-CLI

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES  THIRD-PARTY-NOTICES.md  about.hbs  about.toml  clippy.toml  deny.toml  install.ps1  install.sh  rust-toolchain.toml
crates/codegen/kigi-acp-lib/: Cargo.toml
crates/codegen/kigi-acp-lib/src/: channel.rs  common.rs  gateway.rs  line_reader.rs  message.rs  normalize.rs  stdin_reader.rs
crates/codegen/kigi-agent/: Cargo.toml  README.md
crates/codegen/kigi-agent/src/: agent.rs  builder.rs  compaction.rs  config.rs  discovery.rs  error.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/kigi-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/kigi-bin/: Cargo.toml
crates/codegen/kigi-bin/src/: main.rs
crates/codegen/kigi-chat-state/: Cargo.toml
crates/codegen/kigi-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/kigi-config/: Cargo.toml
crates/codegen/kigi-config-types/: Cargo.toml
crates/codegen/kigi-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/kigi-config/src/: campaigns.rs  lib.rs  loader.rs  macos_managed.rs  managed_cache.rs  paths.rs  shell.rs  signed_policy.rs  validation.rs  version_overrides.rs
crates/codegen/kigi-env/: Cargo.toml
crates/codegen/kigi-env/src/: lib.rs
crates/codegen/kigi-file-utils/: Cargo.toml
crates/codegen/kigi-file-utils/src/: lib.rs  s3.rs  trace_context.rs  workspace_classifier.rs
crates/codegen/kigi-fsnotify/: Cargo.toml
crates/codegen/kigi-fsnotify/benches/: startup.rs
crates/codegen/kigi-fsnotify/examples/: watch_stats.rs
crates/codegen/kigi-fsnotify/src/: event.rs  lib.rs  paths.rs  source.rs  state.rs  watcher.rs
crates/codegen/kigi-fsnotify/tests/: integration.rs
crates/codegen/kigi-hooks/: Cargo.toml
crates/codegen/kigi-hooks-plugins-types/: Cargo.toml
crates/codegen/kigi-hooks-plugins-types/src/: lib.rs
crates/codegen/kigi-hooks/examples/: README.md
crates/codegen/kigi-hooks/src/: config.rs  discovery.rs  dispatcher.rs  env_expand.rs  event.rs  lib.rs  matcher.rs  result.rs  test_support.rs  trust.rs
crates/codegen/kigi-hooks/tests/: integration.rs
crates/codegen/kigi-http/: Cargo.toml
crates/codegen/kigi-http/src/: lib.rs
crates/codegen/kigi-hunk-tracker/: Cargo.toml
crates/codegen/kigi-hunk-tracker/src/: commands.rs  diff.rs  events.rs  handle.rs  lib.rs  types.rs
crates/codegen/kigi-log/: Cargo.toml
crates/codegen/kigi-log/src/: appender.rs  debug_log.rs  hooks_log.rs  instrumentation.rs  lib.rs  memory_log.rs  sampling_log.rs  session_ctx.rs  unified_log.rs
crates/codegen/kigi-memory/: Cargo.toml
crates/codegen/kigi-memory/src/: archive.rs  backend.rs  chunker.rs  dream.rs  dream_lock.rs  embedding.rs  index.rs  lib.rs  mmr.rs  schema.rs  search.rs  storage.rs  text_utils.rs  watcher.rs
crates/codegen/kigi-models/: Cargo.toml  default_models.json  enrichment_snapshot.json
crates/codegen/kigi-models/src/: enrichment.rs  lib.rs
crates/codegen/kigi-pager-minimal/: Cargo.toml
crates/codegen/kigi-pager-minimal/src/: auth.rs  commit.rs  full_view.rs  guard.rs  lib.rs  live.rs  overlay.rs  panel.rs  plan.rs  todo.rs  welcome.rs
crates/codegen/kigi-prompt-queue/: Cargo.toml
crates/codegen/kigi-prompt-queue/src/: lib.rs  types.rs
crates/codegen/kigi-shell/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/kigi-shell-base/: Cargo.toml
crates/codegen/kigi-shell-base/src/: cpu_profile.rs  env.rs  lib.rs
crates/codegen/kigi-shell-session-support/: Cargo.toml
crates/codegen/kigi-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/kigi-shell/benches/: session_list.rs
crates/codegen/kigi-shell/changelogs/: 0.2.16.json  0.2.16.md  0.2.17.json  0.2.17.md  0.2.40.md  0.2.51.md  0.2.55.json  0.2.55.md  0.2.68.json  0.2.68.md  0.2.89.md  0.2.95.md  0.2.96.md
crates/codegen/kigi-shell/src/: active_sessions.rs  builtin.rs  bundle.rs  claude_import.rs  claude_import_state.rs  cli_models.rs  instrumentation.rs  kimi_import.rs  lib.rs  managed_config.rs  mcp_doctor.rs  plugin.rs
crates/codegen/kigi-shell/tests/: git_contention_e2e.rs  sandbox_requirements_pin.rs  session_load_perf.rs  signed_managed_config.rs  signed_managed_config_extended.rs  team_managed_config.rs  test_active_sessions_smoke.rs  test_agent_type_invariant.rs  test_built_binary_e2e.rs  test_config_update_isolation.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_doomloop_capture.rs  test_fork_session.rs  test_global_extra_headers_e2e.rs  test_leader_death_repro.rs  test_leader_soak.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_integration.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_sampling_client.rs  test_settings_refresh.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs  test_xai_session_update.rs  trace_replay.rs
crates/codegen/kigi-subagent-resolution/: Cargo.toml
crates/codegen/kigi-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/kigi-tools-api/: Cargo.toml  build.rs
crates/codegen/kigi-tools-api/proto/: kigi-tools.proto
crates/codegen/kigi-tools-api/src/: config_validation.rs  lib.rs  slash_commands.rs
crates/codegen/kigi-tools-api/tests/: wire_shape.rs
crates/codegen/kigi-update/: Cargo.toml
crates/codegen/kigi-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/kigi-update/tests/: test_blitz_cancel.rs  test_check_status_regression.rs  (+8 more)
crates/codegen/kigi-workspace/: Cargo.toml
crates/codegen/kigi-workspace-client/: Cargo.toml
crates/common/kigi-compaction/: Cargo.toml
crates/common/kigi-computer-hub-core/: Cargo.toml
crates/common/kigi-computer-hub-mcp-adapter/: Cargo.toml
(+1815 files in other folders)
