[package]
license = "Apache-2.0"
name = "kigi-env"
version.workspace = true
edition.workspace = true
description = "Backend environment presets for the Kigi CLI crate family: endpoint URL defaults and env-var test support."

[features]
# single shared rlib per crate, so downstream Bazel test targets need the
default-bazel = []

[dependencies]
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
