[package]
license = "Apache-2.0"
edition.workspace = true
name = "kigi-hooks-plugins-types"
version.workspace = true
description = "Shared DTO types for hooks/plugins ACP extensions (wire format only)"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
