[package]
license = "Apache-2.0"
name = "kigi-hooks"
version.workspace = true
edition.workspace = true
description = "Runtime hook system for Grok — file-based discovery, command execution, and policy enforcement"

[dependencies]
fastrand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = "3.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "rt", "macros", "time"] }
tracing = { workspace = true }
url = { workspace = true }
kigi-config = { workspace = true }
kigi-tools = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true