[package]
license = "Apache-2.0"
name = "kigi-http"
version.workspace = true
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the grok CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
kigi-auth = { workspace = true, features = ["middleware"] }
kigi-sampler = { path = "../kigi-sampler" }
kigi-log = { workspace = true }
kigi-version = { workspace = true }
kigi-workspace = { workspace = true }

[lints]
workspace = true
