[package]
license = "Apache-2.0"
name = "kigi-log"
version.workspace = true
edition.workspace = true
description = "Local, zero-egress observability: unified session log, debug firehose, and subsystem file logs"

[features]
default = []
memory-log = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-chrome = "0.7.2"
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
    "time",
] }
kigi-config = { workspace = true }

[dev-dependencies]
# Sets a symlink's own mtime (std's `set_modified` follows links) for prune tests.
filetime = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
