[package]
name = "kigi-pager-minimal"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
authors = ["xAI"]

# `kigi-ratatui-inline` is reached only through the pager's re-exported
# `PagerTerminal` type (its `insert_before` / viewport methods), so this crate
# never names the crate in code — only in intra-doc links. cargo-shear can't see
# doc links, so keep it ignored rather than dropping the dep (which would break
# those links).
[package.metadata.cargo-shear]
ignored = ["kigi-ratatui-inline"]

[dependencies]
# The pager crate whose view-model (AppView / views / scrollback) this render
# mode reads. NOTE: the dependency only points this way — `kigi-tui` must
# NOT depend on this crate (that would be a cargo cycle). The pager invokes this
# crate via the `kigi_tui::minimal_hook` fn-pointer seam, installed by the
# composition-root binary; see `install()`.
kigi-tui = { path = "../kigi-tui" }

# Rendering primitives (must match the pager's versions).
ratatui = { workspace = true, features = ["crossterm", "unstable-widget-ref"] }
crossterm = { workspace = true, features = ["event-stream", "bracketed-paste"] }
# Transcript temp-file names (`kigi-transcript-<uuid>.ansi`).
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }

# Native scrollback / inline viewport engine (`insert_before`, viewport sizing).
# Used only via the pager's re-exported `PagerTerminal`; see the
# `[package.metadata.cargo-shear]` note above.
kigi-ratatui-inline = { workspace = true }

# Misc used by the commit/live/full-view paths.
chrono = { workspace = true }
similar = { workspace = true }
kigi-shell = { workspace = true }
kigi-version = { workspace = true }
kigi-token-estimation = { workspace = true }

[dev-dependencies]
# The unit tests reuse the pager's test-only view-model constructors
# (`test_agent_view`, yolo/auto setters), gated behind its test-only
# helpers.
kigi-tui = { path = "../kigi-tui", features = ["test-support"] }

[features]
